tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/serverfirst/tcp-server:DISABLE/PERMISSIVE/_test_context/DestinationRule-PeerAuthentication.3521021165.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: c
  namespace: echo-2-88348
spec:
  host: c
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: c
  namespace: echo-2-88348
spec:
  mtls:
    mode: PERMISSIVE
  selector:
    matchLabels:
      app: c
